--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.23.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "postcss": "^8",
+    "prettier": "^3.0.3",
     "tailwindcss": "^3.3.0"
   }
 }
