added icon library and small UI improvs

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emotion/styled": "^11.11.0",
     "@front-finance/api": "^1.1.8",
     "@front-finance/link": "^1.1.8",
-    "@mui/material": "^5.14.17",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
     "@portal-hq/web": "^0.0.5",
     "next": "14.0.2",
     "react": "^18",
