--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@portal-hq/web": "^0.0.5",
+    "ethers": "^6.8.1",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18"
